tests/neg/i7359-b.scala
trait SAMTrait where
  def first(): String
  def notifyAll(): Unit // error
